--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-mic": "^12.4.6",
+    "react-mic-improved": "^13.0.0",
+    "react-mic-record": "^1.0.6",
     "react-scripts": "4.0.3"
   },
   "scripts": {
